<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.healthcalc.CalcScreen2">
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_calc_screen2_activity_lvl"
        android:checkedButton="@+id/rb_calc_screen2_low"
        >
        
        <RadioButton
            android:id="@+id/rb_calc_screen2_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low"
            />
        <RadioButton
            android:id="@+id/rb_calc_screen2_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            />
        <RadioButton
            android:id="@+id/rb_calc_screen2_moderate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moderate"
            />
        <RadioButton
            android:id="@+id/rb_calc_screen2_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active"
            />
        <RadioButton
            android:id="@+id/rb_calc_screen2_extreme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extreme"
            />

        

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_calc_screen2"
        android:layout_below="@+id/rg_calc_screen2_activity_lvl"
        android:text="@string/calculate"/>
</RelativeLayout>
