<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_item_name"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_item_cal"
            android:text="@string/calories"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_item_prot"
            android:text="@string/proteins"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_item_carbs"
            android:text="@string/carbs"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_item_fats"
            android:text="@string/fats"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>