<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.healthcalc.DiaryScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_diary_toprev"
            android:layout_weight="0.6"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_diary_date"
            android:layout_weight="1.8"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_diary_tonext"
            android:layout_weight="0.6"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_diary_name"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_diary_cal"
            android:text="@string/calories"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_diary_prot"
            android:text="@string/proteins"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_diary_carbs"
            android:text="@string/carbs"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_diary_fats"
            android:text="@string/fats"
            android:layout_weight="1"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_diary_screen"></android.support.v7.widget.RecyclerView>
</LinearLayout>
