<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rec_view_diary_item_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_rec_view_diary_item_cal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/calories" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_diary_item_quantity"
            android:text="quantity"
            android:layout_weight="1"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_diary_item_prot"
            android:text="@string/proteins"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tv_rec_view_diary_item_carbs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/carbs" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_rec_view_diary_item_fats"
            android:text="@string/fats"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rec_view_diary_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_vitA"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_vitB6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_vitC"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_vitD"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_zinc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_magnesium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rec_view_diary_item_iron"/>
    </LinearLayout>

</LinearLayout>