<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".OpenScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="37dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_open_activity_go_calc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="New Statistic" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/btn_open_activity_go_diary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="DIARY" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/btn_open_activity_go_db"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Foods" />
    </LinearLayout>
    <!--calories-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="37dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:text="@string/calories" />

                    <TextView
                        android:id="@+id/tv_open_activity_current_calories"
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:text="/" />

                    <TextView
                        android:id="@+id/tv_open_activity_max_calories"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:text="@string/calories" />

                <TextView
                    android:id="@+id/tv_open_activity_current_calories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:text="/" />

                <TextView
                    android:id="@+id/tv_open_activity_max_calories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/tv_open_activity_current_calories"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="/" />

            <TextView
                android:id="@+id/tv_open_activity_max_calories"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/calories" />

        <TextView
            android:id="@+id/tv_open_activity_current_calories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="/" />

        <TextView
            android:id="@+id/tv_open_activity_max_calories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/proteins"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/tv_open_activity_current_proteins"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="/"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/tv_open_activity_max_proteins"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/carbs"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/tv_open_activity_current_carbs"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="/"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/tv_open_activity_max_carbs"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/fats"
            />

        <TextView
            android:id="@+id/tv_open_activity_current_fats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
             />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="/"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:id="@+id/tv_open_activity_max_fats"
            android:gravity="start"
            android:textAlignment="viewStart"
            />
    </LinearLayout>
</LinearLayout>
